# UAb_LDS_Grupo10_ChalkPowder

./: README.md
Diagramas/: criação_sequence.uml  importação_sequence.uml  sequence_diagram_CG_with_errors.uml
Diagrams/: gravação_sequence.uml  importação_sequence.uml  inicialização_sequence.uml
FicheirosTeste/: Livro1.csv  Livro2.csv  Valores alfanuméricos.csv  Valores negativos.csv  csv formato errado.csv
graficos/: pyproject.toml  run.py
graficos/src/graficos/: ILogger.py  IUserView.py  __init__.py  controller.py  controllerConsoleLogger.py  controllerEvent.py  eventos.py  guiview.py  model.py  view.py
graficos/src/graficos/controller/: ILogger.py  __init__.py  controller.py  controllerConsoleLogger.py  controllerEvent.py
graficos/src/graficos/view/: view.py
